# news

./: pyproject.toml
data/: sample_credit_downgrade.txt  sample_news.txt
data/macro_data/: 10year_treasury_yield.csv  Australia_ALL ORDINARIES INDX AS30 Index.csv  China_SHANGHAI SE COMPOSITE IX.csv  Equity_market_volatility_tracker.csv  Equity_market_volatility_tracker_financial_regulation.csv  Hong Kon_HANG SENG INDEX.csv  India_BSE SENSEX 30 INDEX.csv  Indonesia_JAKARTA COMPOSITE INDEX.csv  Industries_countries_mapping.xlsx  Japan_NIKKEI 500.csv  Malaysia_FTSE Bursa Malaysia KLCI.csv  Philippines_PSEi - PHILIPPINE SE IDX.csv  S&P 500 Index.csv  Singapore_STRAITS TIMES INDEX.csv  Singapore_STRAITS TIMES OLD INDEX.csv  South Korea_KOSPI INDEX.csv  Taiwan_TAIWAN TAIEX INDEX.csv  Thailand_STOCK EXCH OF THAI INDEX.csv  US Corporate Bond Yield Spread(1-3 year).csv  US Corporate Bond Yield Spread(10+ year).csv  US Corporate Bond Yield Spread(3-5 year).csv  US Corporate Bond Yield Spread(5-7 year).csv  US Corporate Bond Yield Spread(7-10 year).csv  US Corporate Bond Yield Spread.csv  US Generic Govt 10 Year Yield.csv  US Generic Govt 12 Month Yield.csv  US Generic Govt 2 Year Yield.csv  US Generic Govt 3 Month Yield.csv  US Generic Govt 3 Year Yield.csv  US Generic Govt 5 Year Yield.csv  US Generic Govt 6 Month Yield.csv  US Generic Govt 7 Year Yield.csv  USEPUINDXD_Economic_pol_uncertainty.csv  cpi.csv  housing.csv  interest_rate.csv  lmn_12_month_financial_uncertainty.csv  lmn_1_month_financial_uncertainty.csv  m1.csv  (+5 more)
notebooks/: risk_topic_demo.ipynb
(+8 files in other folders)
