[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
pydantic = "^2.9.2"
langchain-community = "^0.3.0"
langchain-ollama = "^0.2.0"
rich = "^13.9.3"
black = "^24.10.0"
pandas = "^2.2.3"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
cvxopt = "^1.3.2"
scikit-learn = "^1.5.2"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
